--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -5,61 +5,56 @@ body,
   background: transparent;
 }
 
-.footer {
-    position: fixed;
-    bottom: 0%;
-    width: 100vw;
-    padding-bottom: 3vh;
-    display: flex;
-    justify-content: space-around;
-    background-color: #F7F7F7;
-    box-shadow: 0 -1px 5px rgba(76, 76, 76, 0.55);
+.no-entry {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.footer button{
-    width: 25vw;
-    background-color: transparent;
+.no-entry ion-icon {
+  margin-bottom: 5px;
+}
+.no-entry ion-label {
+  color: #888;
 }
 
-.footer button img {
-  width: 30px;
-  height: 30px;
+ion-content .edit-toolbar {
   margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.footer button p {
-  color: #BDBDBD;
-  margin: 5px;
+ion-icon {
+  font-size: 30px;
+  color: #888;
 }
 
-.list-button p {
-  font-weight: bold;
-  color: #2253E0 !important;
+ion-item-option ion-icon {
+  color: white;
 }
 
-.custom-checkbox {
-  width: 20px;
-  height: 20px;
-  border: 2px solid #888;
-  border-radius: 50%;
-  margin-right: 12px;
-  background-color: white;
-  position: relative;
-  cursor: pointer;
+.footer{
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(242, 242, 242);
 }
 
-.custom-checkbox.selected {
-  background-color: #3880ff;
-  border-color: #3880ff;
+.footer-entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
 
-.custom-checkbox.selected::after {
-  content: '';
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  width: 8px;
-  height: 8px;
-  background-color: white;
-  border-radius: 50%;
+.footer-entry ion-label {
+  color: #888;
+}
+
+.footer-list ion-label {
+  color: #0054e9;
+  font-weight: 500;
 }
