--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -18,7 +18,7 @@ body,
   margin-bottom: 5px;
 }
 .no-entry ion-label {
-  color: #888;
+  color: var(--ion-color-medium-tint);
 }
 
 ion-content .edit-toolbar {
@@ -29,17 +29,17 @@ ion-content .edit-toolbar {
 
 ion-icon {
   font-size: 30px;
-  color: #888;
+  color: var(--ion-color-medium-tint);
 }
 
 ion-item-option ion-icon {
-  color: white;
+  color: var(--ion-color-light-tint);
 }
 
 .footer{
   display: flex;
   justify-content: space-around;
-  background-color: rgb(242, 242, 242);
+  background-color: var(--ion-color-light-tint);
 }
 
 .footer-entry {
@@ -51,10 +51,10 @@ ion-item-option ion-icon {
 }
 
 .footer-entry ion-label {
-  color: #888;
+  color: var(--ion-color-medium-tint);
 }
 
 .footer-list ion-label {
-  color: #0054e9;
+  color: var(--ion-color-primary);
   font-weight: 500;
 }
