styling bug fixes

--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -33,7 +33,7 @@ ion-icon {
 }
 
 ion-item-option ion-icon {
-  color: var(--ion-color-light-tint);
+  color: var(--ion-color-light-tint) !important;
 }
 
 .footer{
@@ -54,7 +54,7 @@ ion-item-option ion-icon {
   color: var(--ion-color-medium-tint);
 }
 
-.footer-list ion-label {
-  color: var(--ion-color-primary);
+.active {
+  color: var(--ion-color-primary) !important;
   font-weight: 500;
 }
