color change for swiping

--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -32,8 +32,8 @@ ion-icon {
   color: var(--ion-color-medium-tint);
 }
 
-ion-item-option ion-icon {
-  color: var(--ion-color-light-tint) !important;
+.option-icon {
+  color: var(--ion-color-light) !important;
 }
 
 .footer{
