again final fixes xD

--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -44,6 +44,7 @@ ion-icon {
   align-items: center;
   margin-top: 5px;
   margin-bottom: 25px;
+  font-size: 12px;
 }
 
 .footer-entry ion-label {
@@ -52,7 +53,7 @@ ion-icon {
 
 .active {
   color: var(--ion-color-primary) !important;
-  font-weight: 500;
+  font-weight: 500 !important;
 }
 
 .option-icon {
