made edit buttons fixed at the bottom

--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -22,9 +22,14 @@ body,
 }
 
 ion-content .edit-toolbar {
-  margin-top: 10px;
   display: flex;
   justify-content: space-evenly;
+}
+
+.div-toolbar {
+  position: absolute;
+  bottom: 20px;
+  width: 100vw;
 }
 
 ion-icon {
