--- a/src/theme/home.css
+++ b/src/theme/home.css
@@ -64,3 +64,14 @@ ion-icon {
 .option-icon {
   color: var(--ion-color-light);
 }
+
+.edit-toolbar-fixed {
+  position: fixed;
+  bottom: 56px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-around;
+  padding: 8px 16px 40px 16px;
+  z-index: 1000;
+}
